--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -4,3 +4,11 @@
   margin-top: 4em;
   text-align: center;
 }
+.marker {
+  background-image: url('../assets/data/communauto.png');
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
